# functional

./: .gitignore  CMakeLists.txt  LICENSE  README  compose.cc  test_compose.cc
functional/: compose.h  optional_control.h  state.h
src/: compose.cc  test_compose.cc  test_optional_control.cc  test_state.cc
test/: vector_fixture.h
