CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_TESTING()

PROJECT(compose)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)

ADD_EXECUTABLE(compose compose.cc)
TARGET_LINK_LIBRARIES(compose boost_system boost_timer)

ADD_EXECUTABLE(test_compose test_compose.cc)
ADD_TEST(test_compose ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test_compose)
TARGET_LINK_LIBRARIES(test_compose boost_unit_test_framework)

#SET(CMAKE_BUILD_TYPE DEBUG)
SET(CMAKE_BUILD_TYPE RELEASE)
SET(CMAKE_CXX_COMPILER clang++)
#SET(CMAKE_CXX_COMPILER g++)
SET(CMAKE_CXX_FLAGS "-std=c++0x -Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")

